--- a/portfolio_grid.html
+++ b/portfolio_grid.html
@@ -4,51 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/portfolio_grid.css" />
+    <link rel="stylesheet" href="css/portfolio_grid.css" />
     <title>Portfolio Grid</title>
   </head>
   <body>
     <div class="container">
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
       <div class="container__item">
-        <img src="/images/profile150px.jpg" alt="profile-image" />
+        <img src="images/profile150px.jpg" alt="profile-image" />
         <div class="container__overlay">
-          <div class="container__text">Read More</div>
+          <button>Read More</button>
         </div>
       </div>
     </div>
