--- a/social_media.html
+++ b/social_media.html
@@ -11,23 +11,23 @@
   <body>
     <div class="buttons">
       <div class="buttons__blog">
-        <img src="/images/blogger.png" alt="blogger" />
+        <img src="images/blogger.png" alt="blogger" />
         <a href="">Check out my blog</a>
       </div>
       <div class="buttons__twitter">
-        <img src="/images/twitter.png" alt="twitter" />
+        <img src="images/twitter.png" alt="twitter" />
         <a href="">Follow me on Twitter</a>
       </div>
       <div class="buttons__linkedin">
-        <img src="/images/linkedin.png" alt="linkedin" />
-        <a href="">Connect on Linkedin</a>
+        <img src="images/linkedin.png" alt="linkedIn" />
+        <a href="">Connect on LinkedIn</a>
       </div>
       <div class="buttons__facebook">
-        <img src="/images/facebook.png" alt="facebook" />
+        <img src="images/facebook.png" alt="facebook" />
         <a href="">Like my Facebook page</a>
       </div>
       <div class="buttons__github">
-        <img src="/images/github.png" alt="github" />
+        <img src="images/github.png" alt="github" />
         <a href="">See projects on Github</a>
       </div>
     </div>
